--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "next": "16.1.1",
     "next-auth": "^4.24.11",
     "next-cloudinary": "^6.15.1",
+    "razorpay": "^2.9.6",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
@@ -58,6 +59,7 @@
     "remark-gfm": "^4.0.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
